# obc-foundation

./: CMakeLists.txt  OBCFoundation.cmake  README.md
src/: main.cpp
src/utils/: OBCHelpers.cpp  OBCHelpers.hpp  PureJson.hpp
test/: CMakeLists.txt
test/convert/: main.cpp
